Add support for Argon2id challenge type
